<resources>
    <string name="app_name">ToDo</string>
    <string name="shop_item_name">Сделать дз по френчу</string>
    <string name="add_button">Add Button</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="deadline_date">Deadline: ${deadlineDate}</string>
    <string name="priority_title">Priority</string>
    <string name="name_task">Task title</string>
    <string name="task_description">Убраться в комнате</string>
    <string name="date_deadline_title">Set deadline</string>
    <string name="deadline_date_context">10.01.24</string>
    <string name="priority_context">Средний</string>
    <string name="add_new_task">Add New Task</string>
    <string name="description_title">Description</string>
    <string name="add_description">Add Description</string>
    <string name="create_task">Create task</string>
    <string name="add_task_name">Add Task Name</string>
    <string name="save_task">Save task</string>

    <array name="types_of_priority">
        <item>Low</item>
        <item>Average</item>
        <item>High</item>
    </array>
</resources>