<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.add_item_package.AddToDoItemFragment">

    <TextView
        android:id="@+id/main_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"

        android:text="@string/add_new_task"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/name_task"

        app:layout_constraintTop_toBottomOf="@id/main_title"
        app:layout_constraintStart_toStartOf="parent"

        android:text="@string/name_task"
        style="@style/style_title" />

    <EditText
        android:id="@+id/et_task"

        app:layout_constraintTop_toBottomOf="@id/name_task"
        app:layout_constraintStart_toStartOf="parent"

        style="@style/style_context"
        android:background="@drawable/style_edit_text"/>

    <TextView
        android:id="@+id/date_deadline"

        app:layout_constraintTop_toBottomOf="@id/et_task"
        app:layout_constraintStart_toStartOf="parent"

        android:text="@string/date_deadline_title"
        style="@style/style_title"/>

    <EditText
        android:id="@+id/et_deadline"

        app:layout_constraintTop_toBottomOf="@id/date_deadline"
        app:layout_constraintStart_toStartOf="parent"

        style="@style/style_context"
        android:background="@drawable/style_edit_text"/>

    <TextView
        android:id="@+id/name_priority"

        app:layout_constraintTop_toBottomOf="@id/et_deadline"
        app:layout_constraintStart_toStartOf="parent"

        android:text="@string/priority_title"
        style="@style/style_title"/>

    <Spinner
        android:id="@+id/spinner_priority"

        app:layout_constraintTop_toBottomOf="@id/name_priority"
        app:layout_constraintStart_toStartOf="parent"

        style="@style/style_context"
        android:text="@string/priority_context"
        android:background="@drawable/style_edit_text"

        android:entries="@array/types_of_priority"/>

    <TextView
        android:id="@+id/description_title"

        app:layout_constraintTop_toBottomOf="@id/spinner_priority"
        app:layout_constraintStart_toStartOf="parent"

        android:text="@string/description_title"
        style="@style/style_title"/>

    <EditText
        android:id="@+id/et_description"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        app:layout_constraintTop_toBottomOf="@id/description_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/save_button"

        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="20dp"

        android:background="@drawable/style_edit_text"

        android:hint="@string/add_description"
        android:gravity="start"
        android:textColorHint="@color/black"/>

    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="45dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_description"
        app:layout_constraintBottom_toBottomOf="parent"

        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"

        android:background="@drawable/style_create_button"

        android:text="@string/create_task"
        android:gravity="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"

        android:clickable="true"/>


</androidx.constraintlayout.widget.ConstraintLayout>